<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prototype</string>
    <string name="action_settings">Settings</string>
    <string name="channel_name">Enter a channel name</string>
    <string name="button_connect">Connect</string>
    <string name="title_activity_display_message">MyMessage</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_create">Create</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_quit">Quit</string>
    <string name="player_name">Player name</string>
    <string name="default_player_name">Player</string>

</resources>