<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".LobbyActivity" >

    <EditText
        android:id="@+id/player_name"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:hint="@string/player_name"
        android:text="@string/default_player_name" />
    
    <EditText
        android:id="@+id/create_channel_name"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/create_button"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/create_button"
        android:layout_toLeftOf="@+id/create_button"
        android:layout_below= "@+id/player_name"
        android:hint="@string/channel_name" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below= "@+id/player_name"
        android:onClick="create"
        android:text="@string/button_create" />

    <ListView
        android:id="@+id/join_channel_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/create_channel_name"
        android:layout_alignTop="@+id/refresh_button"
        android:layout_toLeftOf="@+id/refresh_button"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="#00202020"
        android:choiceMode="singleChoice"
        android:divider="#ff505050"
        android:dividerHeight="1dp"
        android:drawSelectorOnTop="true"
        android:transcriptMode="alwaysScroll" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/create_channel_name"
        android:onClick="refresh"
        android:text="@string/button_refresh" />

    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/refresh_button"
        android:layout_alignRight="@+id/refresh_button"
        android:layout_below="@+id/refresh_button"
        android:onClick="quit"
        android:text="@string/button_quit" />

</RelativeLayout>